# ECC-SOP2020

./: .gitignore  BigNum.cpp  BigNum.h  CMakeLists.txt  Curve.cpp  Curve.h  ECCurve.cpp  ECCurve.h  ECPoint.cpp  ECPoint.h  Point.cpp  Point.h  README.md  Struktur.txt  ellipticcurve.cpp  ellipticcurve.h  main.cpp  openssl.cpp  utility.cpp  utility.h
cmake/: CPM.cmake  FindLibGmp.cmake  ParseAndAddCatchTests.cmake
demo/: CMakeLists.txt  main.cpp
src/: BigNum.cpp  BigNum.h  CMakeLists.txt  Curve.cpp  Curve.h  ECDH.cpp  ECDH.h  Point.cpp  Point.h  main.cpp
test/: CMakeLists.txt  bignum_test.cpp  curve_test.cpp  ecdh_openssl.cpp  ecdh_openssl.h  ecdh_test.cpp
